# tapl

./: tapl.cabal
examples/: a.arith  b.arith  c.arith  d.arith  five.arith
src/: Main.hs
src/UArith/: Eval.hs  Parse.hs  Types.hs
