name:                tapl
version:             0.1.0.0
synopsis:            Implementation of language examples in TAPL
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
copyright:           2017 Doug Beardsley
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable tapl
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base   >=4.9 && <4.10,
    parsec,
    text
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
